# pindata

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/hooks/: approve-bash.sh
catalog/cabinets/: cocktail.md  countertop.md  floor.md  tabletop.md
catalog/corporate_entities/: 21st-century-entertainment.md  a-a-design-group.md  a-g-sebring-corporation.md  a-hankin-company.md  a-j-stephens-and-company.md  a-l-randall-company-standard-games-dept.md  a-m-amusement-games.md  a-m-vending-machine-company.md  a-m-walzer-company.md  a-s-douglis-machine-company.md  a-w-co.md  a-zapp-manufacturing-company.md  abbott-specialties-corp.md  abc-coin-machine-company.md  ace-novelty-company.md  (+761 more)
docs/: AGENTS.src.md  Catalog.md
lib/: catalog_loader.py  frontmatter.py  slugify.py
schema/: corporate_entity.schema.json  display_subtype.schema.json  franchise.schema.json  gameplay_feature.schema.json  location_city.schema.json  location_country.schema.json  location_subdivision.schema.json  manufacturer.schema.json  model.schema.json  person.schema.json  series.schema.json  system.schema.json  taxonomy.schema.json  technology_generation.schema.json  technology_subgeneration.schema.json  theme.schema.json  title.schema.json
scripts/: apply_description.py  apply_fields.py  catalog_loader.py  export_catalog_json.py  generate_missing_ipdb_data.py  generate_themes.py  push_to_r2.py  validate_catalog.py
tests/: test_apply_description.py  test_apply_fields.py  test_location_loader.py  test_slugify.py  test_yaml_quote.py
(+14854 files in other folders)
